# VFDB

./: .editorconfig  .gitignore  CMakeLists.txt  GRAMMAR.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  build.bat  build.sh  pyproject.toml  setup.py  test_push_marker.txt
docs/: PHASE1_MODULARIZATION_BREAKDOWN.md
examples/: c_basic.c  python_basic.py
include/: vfdb.h
python/: full_db_test.py  test.py  traceutil.py  tx_bigtest.py  tx_reopen_test.py  txtest.py
python/vfdb/: __init__.py  _native.c
src/: catalog.c  catalog.h  compat_layer.h  heap.c  heap.h  predicate.c  predicate.h  udf_python.c  vf_type.c  vf_type.h  vfdb.c  vfdb_log.c  vfdb_log.h
tests/: test_vfdb_core.py
